devqa/services/clearml-serving/istio/clearml-serving/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: clearml-serving-inference
  namespace: clearml
spec:
  host: clearml-serving-inference
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
